--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,10 +49,10 @@ input[type=submit]:hover {
     border-radius: 1%;
     z-index: 50;
     top: 25%;
-    right: 25%; 
-    background-color: rgb(74, 0, 97, 0.5);
+    right: 33%; 
+    background-color: rgba(49, 0, 64, 0.3);
     height: 50%;
-    width: 50%;
+    width: 30%;
 }
 
 .form input {
@@ -82,7 +82,7 @@ input[type=submit]:hover {
     cursor: pointer;
 }
 
-.form button:hover,.form button:active,.form button:focus {
+.form button:hover, .form button:active, .form button:focus {
     background: #430432;
 }
 
@@ -91,4 +91,56 @@ input[type=submit]:hover {
         width: 100%;
         right: 0;
     }
+}
+
+.container {
+    padding: 2rem 0rem;
+}
+
+.modal-dialog {
+    margin-top: 0rem;
+    max-width: 100%;
+}
+
+.modal-content {
+    border-radius: 0rem;
+}
+
+.buttons .btn{
+    margin: 0.2rem;
+}
+
+.cookies {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: 60;
+    top: 10%;
+    padding: 5rem;
+    height: 50vh;
+    width: 25%;
+}
+
+.cookies .buttons {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.cookies .buttons button {
+    border: none;
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    color: #FFFFFF;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+    padding: 15px;
+    background: #430432;
 }
